# OpenWildlife-ls-ML-backend

./: pyproject.toml  requirements.txt
.github/workflows/: build.yml  gitleaks.yml  tests.yml
label_studio_ml/: api.py  model.py  utils.py
